# sagebaker

./: .gitignore  Dockerfile  Makefile  OVERVIEW.md  PLAN.md  PLAYBOOK.md  README.md  Untitled1.ipynb  Untitled2.ipynb  agent.py  evaluate.py  local_serve.py  local_train.py  local_train_dlc.py  mlflow.db  pipeline.py  program.md  program_regression.md  pyproject.toml  requirements-bigquery.txt  requirements-retrieval.txt  requirements-skops.txt  requirements.txt  serve.py  upload_sonar_to_bq.py
docker/: README.md
docker/embedding/: Dockerfile
docker/tabular/: Dockerfile
examples/conversion-prediction/: README.md
examples/product-matching/: README.md
examples/recommender/: README.md
examples/record-linkage/: README.md
model_skops/: config.json  metadata.json  model.skops
notebooks/: bigquery_exploration.ipynb
prep/: prepare.py  prepare_bigquery.py  prepare_data.py  prepare_linkage.py  prepare_matcher_pairs.py  prepare_movielens.py  prepare_simulate.py  prepare_sonar.py
simulate/: __init__.py  products.py
simulate/scenarios/: product_catalog.py
src/: tracking.py  train.py  train_lightgbm.py  train_recommender.py  train_retrieval.py  train_torch.py
src/plugins/: __init__.py  als.py  base.py  base_recommender.py  base_retrieval.py  clickstream.py  housing.py  product_matcher.py  product_search.py
tools/: install_plugin_deps.py
